@@ -12,7 +12,7 @@ imports Complex_Main
 begin
 
 nitpick_params [card = 1\<midarrow>4, sat_solver = MiniSat_JNI, max_threads = 1,
-                timeout = 60 s]
+                timeout = 60]
 
 typedef three = "{0\<Colon>nat, 1, 2}"
 by blast
